# modern-opengl-starter

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
